--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
+---
+title: Portal mistico
+layout: post
+---
+
 <h1>Hola Mundo</h1>
 <h2>Hola Mundo</h2>
 <h3>Hola Mundo</h3>
 <h4>Hola Mundo</h4>
 <h5>Hola Mundo</h5>
+
+* Markdown
+** Markdown
