--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" type="text/css" href="assets/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/grid.css">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
-    <link href="//abs.twimg.com/favicons/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <script type="text/javascript">
 
     </script>
@@ -192,7 +191,7 @@
     <div id="wrapper" class="grid clearfix">
       <div id="main" class="grid-1">
         <div id="logo"></div>
-        <h1>My projects on github</h1>
+        <h1>Github repositories</h1>
         <p>Visit <a href="https://cesar.velandia.co/">cesar.velandia.co</a></p>
       </div>
 
