--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <div id="main" class="grid-1">
         <div id="logo"></div>
         <h1>Github repositories</h1>
-        <p>Visit <a href="https://cesar.velandia.co/">cesar.velandia.co</a></p>
+        <p>Visit <a href="http://cesar.velandia.co/">cesar.velandia.co</a></p>
       </div>
 
       <div class="grid grid-3">
