--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" type="text/css" href="assets/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/grid.css">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
-    <script type="text/javascript">
-
-    </script>
+    <link href="http://emojicss.com/emoji.css" rel="stylesheet">
     <script type="text/javascript" src="assets/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="assets/strftime.js"></script>
     <script type="text/javascript">
@@ -62,9 +60,21 @@
       function addRepo(repo) {
         var $item = $("<li>").addClass("repo grid-1 " + (repo.language || '').toLowerCase());
         var $link = $("<a>").attr("href", repoUrl(repo)).appendTo($item);
+        
+        var $description = repoDescription(repo);
+        var regex = /:([\w]+):/g
+        m = regex.exec($description);
+
+        if (m){
+          $description = $("<p>").text(repoDescription(repo).replace(m[0], ''));
+          $description.prepend($("<i>").attr("class", 'em em-'+m[1]));
+        }else{
+          $description = $("<p>").text(repoDescription(repo));
+        }
+
         $link.append($("<h2>").text(repo.name));
         $link.append($("<h3>").text(repo.language));
-        $link.append($("<p>").text(repoDescription(repo)));
+        $link.append($description);
         $link.append($("<p>").text(repoHomepage(repo)));
         $item.appendTo("#repos");
       }
@@ -191,7 +201,7 @@
     <div id="wrapper" class="grid clearfix">
       <div id="main" class="grid-1">
         <div id="logo"></div>
-        <h1>Github repositories</h1>
+        <h1>Home of some personal projects</h1>
         <p>Visit <a href="http://cesar.velandia.co/">cesar.velandia.co</a></p>
       </div>
 
